[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "full"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.12.4-rc.1"}
dotenv = "0.15"